add background color on container,body

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 .container
 {
-    background: black;
+    background:white;
     width: 200px;
     height: 200px;
 }
 button{
-    background-color: aqua;
+    background-color: grey;
+    color: white;
 
 }
 button :hover{
     color: aliceblue;
+}
+body{
+    background-color: aquamarine;
 }
