--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,39 @@
-.container
+/* .container
 {
     background:white;
-    width: 200px;
-    height: 200px;
-}
+    width: 350px;
+    height: 300px;
+} */
 body{
     background-color: aquamarine;
 }
+form li 
+{
+    list-style: none;
+    margin-bottom: 5px;
+}
+    
+form ul li label
+{
+    float: left;
+    clear: left;
+    width: 100px;
+    text-align: right;
+    margin-right: 10px;
+    font-family:Verdana, Arial, Helvetica, sans-serif;
+    font-size:14px;
+}
+    
+form ul li input, select
+{
+    float: left;
+    margin-bottom: 10px;
+}
+    
+[type="submit"] 
+{
+    clear: left;
+    margin: 20px 0 0 230px;
+    font-size:18px
+}
+    
