--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,15 @@
-/* .container
-{
-    background:white;
-    width: 350px;
-    height: 300px;
+.container{
+    background:grey;
+    border: 3px solid black;
+    width: 700px;
+    height:550px;
+    margin-top: 10px;
 }
 body{
-    background-color: aquamarine;
+    background:blanchedalmond;
 }
-form li 
-{
-    list-style: none;
-    margin-bottom: 5px;
+button{
+    border: 2px solid black;
 }
-    
-form ul li label
-{
-    float: left;
-    clear: left;
-    width: 100px;
-    text-align: right;
-    margin-right: 10px;
-    font-family:Verdana, Arial, Helvetica, sans-serif;
-    font-size:14px;
-}
-    
-form ul li input, select,span
-{
-    float: left;
-    margin-bottom: 10px;
-} */
-    
-[type="submit"] 
-{
-    clear: left;
-    margin: 20px 0 0 230px;
-    font-size:18px
-}
+
     
