--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-.container{
+/* .container{
     background:grey;
     border: 1px solid black;
     width: 450px;
-    height:300px;
+    height:250px;
     margin-top: 20px;
 }
 body{
@@ -12,7 +12,7 @@ body{
     width: 100%;
     height: 10%;
 }
-/* .col-md-3{
+/* .col-md-3{ */
     float: right;
 } */
 /* .form-group{
