--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,3 @@
-/* .container{
-    background:grey;
-    border: 1px solid black;
-    width: 450px;
-    height:250px;
-    margin-top: 20px;
+.form-horizontal{
+    background: grey;
 }
-body{
-    background:blanchedalmond;
-}
-.jumbotron{
-    width: 100%;
-    height: 10%;
-}
-/* .col-md-3{ */
-    float: right;
-} */
-/* .form-group{
-  justify-content: right;
-} */
