--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 .form-horizontal{
     background: grey;
 }
+.jumbotron{
+    background: black;
+}
+h1{
+    color: white;
+    font-size: 80px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
