--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,8 @@ h1{
     font-size: 80px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+h4
+{
+    text-align: center;
+    font-size: 10px;
+}
