--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 .jumbotron{
     background: black;
 }
-h1{
+h1
+{
     color: white;
     font-size: 80px;
     font-family: Georgia, 'Times New Roman', Times, serif;
